--- a/Lost-And-Found/Frontend/public/index.html
+++ b/Lost-And-Found/Frontend/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Lost and Found">
     <meta property="og:description" content="Lost And Found">
     <meta property="og:image"
-      content="https://github.com/arjuncvinod/Lost-And-Found/assets/68469520/7b68e817-1a62-4dfb-835f-6008379f752d" />
+      content="/>
     
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
@@ -22,11 +22,10 @@
     <meta property="og:image:alt" content="website icon" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="arjuncvinod" />
+    <meta name="twitter:site" content="Sam" />
     <meta name="twitter:title" content="Lost and found" />
     <meta name="twitter:description" content="Lost and Found" />
-    <meta name="twitter:image"
-      content="https://github.com/arjuncvinod/Lost-And-Found/assets/68469520/7b68e817-1a62-4dfb-835f-6008379f752d" />
+    <meta name="twitter:image" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
